# advent-of-code-py

./: .gitignore  fix_whitespace.sh  pyproject.toml  start_new_day.sh
aoc2025/day_1/: aoc25_day_1.py  day_1.py  instructions.md
aoc2025/day_10/: day_10.py  instructions.md
aoc2025/day_11/: day_11.py  instructions.md
aoc2025/day_12/: art.py  day_12.py  instructions.md
aoc2025/day_2/: day_2.py  instructions.md
aoc2025/day_3/: day_3.py  instructions.md
aoc2025/day_4/: day_4.py  instructions.md
aoc2025/day_5/: day_5.py  instructions.md
aoc2025/day_6/: day_6.py  instructions.md
aoc2025/day_7/: day_7.py  instructions.md  pretty_print_tree.py
aoc2025/day_8/: day_8.py  instructions.md
aoc2025/day_9/: day_9.py  instructions.md
