[project]
name = "aoc25"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asciimatics>=1.15.0",
    "requests-cache>=1.2.1",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "W"]
